--- a/src/app/megamenu/megamenu.component.scss
+++ b/src/app/megamenu/megamenu.component.scss
@@ -23,9 +23,9 @@ body, html {
 .mega-menu {
   width: 100%;
   font-family: Arial, sans-serif;
-  background-color: #333;
+  background-color: #f5f5f5;
   color: #fff;
-  padding: 10px 0;
+  border: 0.5px solid #cccccc;
 }
 
 .menu {
@@ -34,7 +34,7 @@ body, html {
   padding: 0;
   display: flex;
   justify-content: start;
-  gap: 20px;
+  align-items: center;
 }
 
 .menu-item {
@@ -43,34 +43,39 @@ body, html {
   cursor: pointer;
   transition: background-color 0.3s ease;
   white-space: nowrap;
+  border-left: 0.5px solid #cccccc;
 }
 
 .menu-item a {
-  color: #fff;
+  color: #424242;
   text-decoration: none;
 }
 
 .menu-item:hover {
-  background-color: #444;
+  background-color: #ffffff;
 }
 
 .submenu {
   list-style: none;
   margin: 0;
   padding: 5px 0;
-  background-color: #444;
+  background-color: #e3e3e3;
   position: absolute;
   top: 100%;
   left: 0;
   display: none;
-  width: 200px;
+  width: 300px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 101;
+  height: 500px;
 }
 
 .submenu .submenu {
   left: 100%;
   top: 0;
+  width: 500px; 
+  background-color: #ffffff; 
+  border: 1px solid #cccccc;
 }
 
 .menu-item:hover > .submenu,
@@ -84,12 +89,12 @@ body, html {
 }
 
 .submenu-item a {
-  color: #fff;
+  color: #424242;
   text-decoration: none;
 }
 
 .submenu-item:hover {
-  background-color: #555;
+  background-color: #fff;
 }
 
 @media (max-width: 768px) {
@@ -113,16 +118,14 @@ body, html {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: #f4f4f4; 
+  background-color: #ffffff; 
   padding: 20px;
 }
 
 .navigation-config {
   flex: 1; 
   background-color: #ffffff;
-  border: 1px solid #ddd;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 30px;
+  padding: 10px;
   overflow-y: auto; 
 }
 
@@ -132,14 +135,14 @@ body, html {
 
 h2 {
   font-size: 2rem;
-  margin-bottom: 20px;
+  margin-bottom: 4px;
   color: #333;
 }
 
 h3 {
   font-size: 1.5rem;
-  margin-top: 30px;
-  margin-bottom: 15px;
+  margin-top: 20px;
+  margin-bottom: 4px;
   color: #555;
 }
 
@@ -148,33 +151,51 @@ p {
   margin-bottom: 15px;
   color: #666;
 }
-
-.navigation-form label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
+.form-horizontal {
+  display: flex;
+  align-items: center; 
+  gap: 10px;
 }
 
-.navigation-form input,
-.navigation-form select {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 1rem;
-}
-
-.navigation-form button {
-  background-color: #007bff;
+.form-horizontal button {
+  background-color: #6264a7;
   color: #ffffff;
   border: none;
-  padding: 10px 20px;
+  padding: 8px 16px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
 }
 
-.navigation-form button:hover {
-  background-color: #0056b3;
+.form-horizontal button:hover {
+  background-color: #434573;
+}
+
+.form-horizontal select,
+.form-horizontal input {
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.form-horizontal select {
+  min-width: 200px; 
+}
+
+.form-horizontal input {
+  flex: 1;
+  min-width: 200px; 
+}
+
+.mat-icon{
+  color: black;
+
+}
+
+button.mat-raised-button[disabled] {
+  background-color: #e0e0e0 !important; 
+  color: #9e9e9e !important; 
+  opacity: 1 !important; 
+  cursor: not-allowed;
 }
