--- a/src/app/megamenu/megamenu.component.html
+++ b/src/app/megamenu/megamenu.component.html
@@ -6,6 +6,9 @@
         <li *ngFor="let item of filteredMenu" class="menu-item" (mouseenter)="item.isOpen = true"
           (mouseleave)="item.isOpen = false">
           <a [routerLink]="item.url">{{ item.label }}</a>
+          <mat-icon *ngIf="item.children.length > 0" class="arrow-icon" >
+            arrow_drop_down
+          </mat-icon>
           <!-- Recursive menu rendering -->
           <ul *ngIf="item.children.length > 0 && item.isOpen" class="submenu">
             <ng-container *ngTemplateOutlet="recursiveMenu; context: { $implicit: item.children }"></ng-container>
@@ -20,6 +23,7 @@
     <li *ngFor="let child of children" class="submenu-item" (mouseenter)="child.isOpen = true"
       (mouseleave)="child.isOpen = false">
       <a [routerLink]="child.url">{{ child.label }}</a>
+      <mat-icon *ngIf="child.children?.length > 0 && child.isOpen">arrow_right</mat-icon>
       <ul *ngIf="child.children?.length > 0 && child.isOpen" class="submenu">
         <ng-container *ngTemplateOutlet="recursiveMenu; context: { $implicit: child.children }"></ng-container>
       </ul>
