--- a/src/app/megamenu/megamenu.component.scss
+++ b/src/app/megamenu/megamenu.component.scss
@@ -17,7 +17,7 @@ body, html {
 
 .mega-menu-container {
   width: 100%;
-  background-color: #333;
+  background-color: #333;;
 }
 
 .mega-menu {
@@ -44,10 +44,12 @@ body, html {
   transition: background-color 0.3s ease;
   white-space: nowrap;
   border-left: 0.5px solid #cccccc;
+  display: flex
 }
 
 .menu-item a {
   color: #424242;
+  font-weight: bold; 
   text-decoration: none;
 }
 
@@ -64,16 +66,16 @@ body, html {
   top: 100%;
   left: 0;
   display: none;
-  width: 300px;
+  // width: 300px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 101;
-  height: 500px;
+  // height: 500px;
 }
 
 .submenu .submenu {
   left: 100%;
   top: 0;
-  width: 500px; 
+  // width: 500px; 
   background-color: #ffffff; 
   border: 1px solid #cccccc;
 }
@@ -86,6 +88,7 @@ body, html {
 .submenu-item {
   position: relative;
   padding: 10px 20px;
+  display: flex
 }
 
 .submenu-item a {
@@ -198,4 +201,8 @@ button.mat-raised-button[disabled] {
   color: #9e9e9e !important; 
   opacity: 1 !important; 
   cursor: not-allowed;
+}
+
+.mat-form-field {
+  margin-right: 12px;
 }
